Course section cards created

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
       </div>
       <section id="categories">
         <div class="container">
-          <div class="section-title text-center">
+          <div class="section-title">
             <p class="background-title">Categories</p>
             <span class="section-subtitle">_ Top Categories _</span>
             <h2 class="section-bigtitle">
@@ -456,6 +456,340 @@
                 <img src="/assets/img/top categories 1.jpg" alt="" />
               </div>
               <a href="#" class="item-hover-link">+</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="course">
+        <div class="container">
+          <div class="section-title">
+            <p class="background-title">Course</p>
+            <span class="section-subtitle">_ Our Popular Courses _</span>
+            <h2 class="section-bigtitle">
+              The largest selection of courses for learning for students
+            </h2>
+          </div>
+          <div class="row">
+            <div class="col-lg-3">
+              <div class="course-card">
+                <div class="course-card-header">
+                  <img src="/assets/img/card/pc1.jpg" alt="" />
+                </div>
+                <div class="course-card-body">
+                  <span class="price"
+                    >Course Fee:
+                    <p>$59</p>
+                    <strong>$39</strong></span
+                  >
+                  <h6 class="course-name">
+                    <a href="#"> User Experience Research & Design </a>
+                  </h6>
+                  <div class="counts">
+                    <a>
+                      <i class="fas fa-file"></i>
+                      14 Lessons
+                    </a>
+                    <a>
+                      <i class="fas fa-user"></i>
+                      20 Students
+                    </a>
+                  </div>
+                </div>
+                <div class="course-card-footer">
+                  <div class="votes">
+                    <ul>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                    </ul>
+                    <span>(12) Votes</span>
+                  </div>
+                  <a class="course-btn"><i class="fas fa-chevron-right"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="course-card">
+                <div class="course-card-header">
+                  <img src="/assets/img/card/pc2.jpg" alt="" />
+                </div>
+                <div class="course-card-body">
+                  <span class="price"
+                    >Course Fee:
+                    <p>$59</p>
+                    <strong>$39</strong></span
+                  >
+                  <h6 class="course-name">
+                    <a href="#"> Copyright Law in Music Course </a>
+                  </h6>
+                  <div class="counts">
+                    <a>
+                      <i class="fas fa-file"></i>
+                      14 Lessons
+                    </a>
+                    <a>
+                      <i class="fas fa-user"></i>
+                      20 Students
+                    </a>
+                  </div>
+                </div>
+                <div class="course-card-footer">
+                  <div class="votes">
+                    <ul>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                    </ul>
+                    <span>(12) Votes</span>
+                  </div>
+                  <a class="course-btn"><i class="fas fa-chevron-right"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="course-card">
+                <div class="course-card-header">
+                  <img src="/assets/img/card/pc3.jpg" alt="" />
+                </div>
+                <div class="course-card-body">
+                  <span class="price"
+                    >Course Fee:
+                    <p>$59</p>
+                    <strong>$39</strong></span
+                  >
+                  <h6 class="course-name">
+                    <a href=""> Master of Public Health Course </a>
+                  </h6>
+                  <div class="counts">
+                    <a>
+                      <i class="fas fa-file"></i>
+                      14 Lessons
+                    </a>
+                    <a>
+                      <i class="fas fa-user"></i>
+                      20 Students
+                    </a>
+                  </div>
+                </div>
+                <div class="course-card-footer">
+                  <div class="votes">
+                    <ul>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                    </ul>
+                    <span>(12) Votes</span>
+                  </div>
+                  <a class="course-btn"><i class="fas fa-chevron-right"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="course-card">
+                <div class="course-card-header">
+                  <img src="/assets/img/card/pc4.jpg" alt="" />
+                </div>
+                <div class="course-card-body">
+                  <span class="price"
+                    >Course Fee:
+                    <p>$59</p>
+                    <strong>$39</strong></span
+                  >
+                  <h6 class="course-name">
+                    <a href=""> User Experience Research & Design </a>
+                  </h6>
+                  <div class="counts">
+                    <a>
+                      <i class="fas fa-file"></i>
+                      14 Lessons
+                    </a>
+                    <a>
+                      <i class="fas fa-user"></i>
+                      20 Students
+                    </a>
+                  </div>
+                </div>
+                <div class="course-card-footer">
+                  <div class="votes">
+                    <ul>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                    </ul>
+                    <span>(12) Votes</span>
+                  </div>
+                  <a class="course-btn"><i class="fas fa-chevron-right"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-lg-3">
+              <div class="course-card">
+                <div class="course-card-header">
+                  <img src="/assets/img/card/pc5.jpg" alt="" />
+                </div>
+                <div class="course-card-body">
+                  <span class="price"
+                    >Course Fee:
+                    <p>$59</p>
+                    <strong>$39</strong></span
+                  >
+                  <h6 class="course-name">
+                    <a href=""> Digital Marketing and SMM Course </a>
+                  </h6>
+                  <div class="counts">
+                    <a>
+                      <i class="fas fa-file"></i>
+                      14 Lessons
+                    </a>
+                    <a>
+                      <i class="fas fa-user"></i>
+                      20 Students
+                    </a>
+                  </div>
+                </div>
+                <div class="course-card-footer">
+                  <div class="votes">
+                    <ul>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                    </ul>
+                    <span>(12) Votes</span>
+                  </div>
+                  <a class="course-btn"><i class="fas fa-chevron-right"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="course-card">
+                <div class="course-card-header">
+                  <img src="/assets/img/card/pc6.jpg" alt="" />
+                </div>
+                <div class="course-card-body">
+                  <span class="price"
+                    >Course Fee:
+                    <p>$59</p>
+                    <strong>$39</strong></span
+                  >
+                  <h6 class="course-name">
+                    <a href=""> Graphic Design and Logo Design Course </a>
+                  </h6>
+                  <div class="counts">
+                    <a>
+                      <i class="fas fa-file"></i>
+                      14 Lessons
+                    </a>
+                    <a>
+                      <i class="fas fa-user"></i>
+                      20 Students
+                    </a>
+                  </div>
+                </div>
+                <div class="course-card-footer">
+                  <div class="votes">
+                    <ul>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                    </ul>
+                    <span>(12) Votes</span>
+                  </div>
+                  <a class="course-btn"><i class="fas fa-chevron-right"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="course-card">
+                <div class="course-card-header">
+                  <img src="/assets/img/card/pc4.jpg" alt="" />
+                </div>
+                <div class="course-card-body">
+                  <span class="price"
+                    >Course Fee:
+                    <p>$59</p>
+                    <strong>$39</strong></span
+                  >
+                  <h6 class="course-name">
+                    <a href=""> User Experience Research & Design </a>
+                  </h6>
+                  <div class="counts">
+                    <a>
+                      <i class="fas fa-file"></i>
+                      14 Lessons
+                    </a>
+                    <a>
+                      <i class="fas fa-user"></i>
+                      20 Students
+                    </a>
+                  </div>
+                </div>
+                <div class="course-card-footer">
+                  <div class="votes">
+                    <ul>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                    </ul>
+                    <span>(12) Votes</span>
+                  </div>
+                  <a class="course-btn"><i class="fas fa-chevron-right"></i></a>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <div class="course-card">
+                <div class="course-card-header">
+                  <img src="/assets/img/card/pc4.jpg" alt="" />
+                </div>
+                <div class="course-card-body">
+                  <span class="price"
+                    >Course Fee:
+                    <p>$59</p>
+                    <strong>$39</strong></span
+                  >
+                  <h6 class="course-name">
+                    <a href=""> User Experience Research & Design </a>
+                  </h6>
+                  <div class="counts">
+                    <a>
+                      <i class="fas fa-file"></i>
+                      14 Lessons
+                    </a>
+                    <a>
+                      <i class="fas fa-user"></i>
+                      20 Students
+                    </a>
+                  </div>
+                </div>
+                <div class="course-card-footer">
+                  <div class="votes">
+                    <ul>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                      <li><i class="fas fa-star"></i></li>
+                    </ul>
+                    <span>(12) Votes</span>
+                  </div>
+                  <a class="course-btn"><i class="fas fa-chevron-right"></i></a>
+                </div>
+              </div>
             </div>
           </div>
         </div>
