Course section finished

--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
             </h2>
           </div>
           <div class="row">
-            <div class="col-lg-3">
+            <div class="col-md-6 col-lg-4 col-xl-3">
               <div class="course-card">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc1.jpg" alt="" />
@@ -510,7 +510,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-md-6 col-lg-4 col-xl-3">
               <div class="course-card">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc2.jpg" alt="" />
@@ -550,7 +550,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-md-6 col-lg-4 col-xl-3">
               <div class="course-card">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc3.jpg" alt="" />
@@ -590,7 +590,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-md-6 col-lg-4 col-xl-3">
               <div class="course-card">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc4.jpg" alt="" />
@@ -630,8 +630,7 @@
                 </div>
               </div>
             </div>
-
-            <div class="col-lg-3">
+            <div class="col-md-6 col-lg-4 col-xl-3">
               <div class="course-card">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc5.jpg" alt="" />
@@ -671,7 +670,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-md-6 col-lg-4 col-xl-3">
               <div class="course-card">
                 <div class="course-card-header">
                   <img src="/assets/img/card/pc6.jpg" alt="" />
@@ -711,10 +710,10 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-md-6 col-lg-4 col-xl-3">
               <div class="course-card">
                 <div class="course-card-header">
-                  <img src="/assets/img/card/pc4.jpg" alt="" />
+                  <img src="/assets/img/card/pc7.jpg" alt="" />
                 </div>
                 <div class="course-card-body">
                   <span class="price"
@@ -723,7 +722,7 @@
                     <strong>$39</strong></span
                   >
                   <h6 class="course-name">
-                    <a href=""> User Experience Research & Design </a>
+                    <a href=""> Computer Basic Startup Ultricies Vitae </a>
                   </h6>
                   <div class="counts">
                     <a>
@@ -751,10 +750,10 @@
                 </div>
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-md-6 col-lg-4 col-xl-3">
               <div class="course-card">
                 <div class="course-card-header">
-                  <img src="/assets/img/card/pc4.jpg" alt="" />
+                  <img src="/assets/img/card/pc8.jpg" alt="" />
                 </div>
                 <div class="course-card-body">
                   <span class="price"
@@ -763,7 +762,7 @@
                     <strong>$39</strong></span
                   >
                   <h6 class="course-name">
-                    <a href=""> User Experience Research & Design </a>
+                    <a href=""> Molecular Biology, Biotechnology Courses </a>
                   </h6>
                   <div class="counts">
                     <a>
@@ -792,6 +791,10 @@
               </div>
             </div>
           </div>
+          <a href="#" class="btn-usual"
+            >All Course
+            <i class="fas fa-arrow-right"></i>
+          </a>
         </div>
       </section>
     </main>
