Testimonials section created

--- a/index.html
+++ b/index.html
@@ -797,6 +797,51 @@
           </a>
         </div>
       </section>
+      <section id="registration">
+        <div class="container">
+          <div class="registration-content">
+            <div class="girl">
+              <img src="/assets/img/reklam banner girl.png" alt="" />
+            </div>
+            <div class="registration-text">
+              <h3>Get 10% Off on registration fee for <span>COVID-19</span></h3>
+              <p>
+                The last step you need to take to be allowed to follow a course
+                is to be registered on it.
+              </p>
+              <a href="" class="btn-usual">Register now</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section id="testimonials">
+        <div class="container">
+          <div class="section-title">
+            <p class="background-title">Testimonials</p>
+            <span class="section-subtitle">_ Testimonials _</span>
+            <h2 class="section-bigtitle">
+              We have many courses in our top Categories
+            </h2>
+          </div>
+
+          <div class="testimonials-slider owl-carousel owl-theme">
+            <div class="testimonials-item">
+              <div class="testimonials-text">
+                <h6>Best Support ever!</h6>
+                <p>
+                  5 stars for design quality, but also for prompt new customer
+                  service and great attention to details work.
+                </p>
+              </div>
+              <div class="testimonials-author">
+                <div class="author-img"></div>
+                <p>Alina Lora</p>
+                <p>Formar Manager.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <footer></footer>
     <!-- Modal -->
