Testimonials are finished

--- a/index.html
+++ b/index.html
@@ -823,20 +823,131 @@
               We have many courses in our top Categories
             </h2>
           </div>
-
           <div class="testimonials-slider owl-carousel owl-theme">
             <div class="testimonials-item">
-              <div class="testimonials-text">
+              <div class="quoute-icon">
+                <i class="fas fa-quote-right"></i>
+              </div>
+              <div class="testimonial-text">
                 <h6>Best Support ever!</h6>
                 <p>
                   5 stars for design quality, but also for prompt new customer
                   service and great attention to details work.
                 </p>
               </div>
-              <div class="testimonials-author">
-                <div class="author-img"></div>
-                <p>Alina Lora</p>
-                <p>Formar Manager.</p>
+              <div class="testimonial-author">
+                <div class="author-img">
+                  <img src="/assets/img/testimonal 1.jpg" alt="" />
+                </div>
+                <div class="author-name">
+                  <a href="#">Alina Lora</a>
+                  <p>Formar Manager.</p>
+                </div>
+              </div>
+            </div>
+            <div class="testimonials-item">
+              <div class="quoute-icon">
+                <i class="fas fa-quote-right"></i>
+              </div>
+              <div class="testimonial-text">
+                <h6>Best Support ever!</h6>
+                <p>
+                  5 stars for design quality, but also for prompt new customer
+                  service and great attention to details work.
+                </p>
+              </div>
+              <div class="testimonial-author">
+                <div class="author-img">
+                  <img src="/assets/img/testimonal 1.jpg" alt="" />
+                </div>
+                <div class="author-name">
+                  <a href="#">Alina Lora</a>
+                  <p>Formar Manager.</p>
+                </div>
+              </div>
+            </div>
+            <div class="testimonials-item">
+              <div class="quoute-icon">
+                <i class="fas fa-quote-right"></i>
+              </div>
+              <div class="testimonial-text">
+                <h6>Best Support ever!</h6>
+                <p>
+                  5 stars for design quality, but also for prompt new customer
+                  service and great attention to details work.
+                </p>
+              </div>
+              <div class="testimonial-author">
+                <div class="author-img">
+                  <img src="/assets/img/testimonal 1.jpg" alt="" />
+                </div>
+                <div class="author-name">
+                  <a href="#">Alina Lora</a>
+                  <p>Formar Manager.</p>
+                </div>
+              </div>
+            </div>
+            <div class="testimonials-item">
+              <div class="quoute-icon">
+                <i class="fas fa-quote-right"></i>
+              </div>
+              <div class="testimonial-text">
+                <h6>Best Support ever!</h6>
+                <p>
+                  5 stars for design quality, but also for prompt new customer
+                  service and great attention to details work.
+                </p>
+              </div>
+              <div class="testimonial-author">
+                <div class="author-img">
+                  <img src="/assets/img/testimonal 1.jpg" alt="" />
+                </div>
+                <div class="author-name">
+                  <a href="#">Alina Lora</a>
+                  <p>Formar Manager.</p>
+                </div>
+              </div>
+            </div>
+            <div class="testimonials-item">
+              <div class="quoute-icon">
+                <i class="fas fa-quote-right"></i>
+              </div>
+              <div class="testimonial-text">
+                <h6>Best Support ever!</h6>
+                <p>
+                  5 stars for design quality, but also for prompt new customer
+                  service and great attention to details work.
+                </p>
+              </div>
+              <div class="testimonial-author">
+                <div class="author-img">
+                  <img src="/assets/img/testimonal 1.jpg" alt="" />
+                </div>
+                <div class="author-name">
+                  <a href="#">Alina Lora</a>
+                  <p>Formar Manager.</p>
+                </div>
+              </div>
+            </div>
+            <div class="testimonials-item">
+              <div class="quoute-icon">
+                <i class="fas fa-quote-right"></i>
+              </div>
+              <div class="testimonial-text">
+                <h6>Best Support ever!</h6>
+                <p>
+                  5 stars for design quality, but also for prompt new customer
+                  service and great attention to details work.
+                </p>
+              </div>
+              <div class="testimonial-author">
+                <div class="author-img">
+                  <img src="/assets/img/testimonal 1.jpg" alt="" />
+                </div>
+                <div class="author-name">
+                  <a href="#">Alina Lora</a>
+                  <p>Formar Manager.</p>
+                </div>
               </div>
             </div>
           </div>
