--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
       </section>
       <section id="testimonials">
         <div class="container">
-          <div class="section-title">
+          <div class="section-title mb-5">
             <p class="background-title">Testimonials</p>
             <span class="section-subtitle">_ Testimonials _</span>
             <h2 class="section-bigtitle">
@@ -850,7 +850,7 @@
                 <i class="fas fa-quote-right"></i>
               </div>
               <div class="testimonial-text">
-                <h6>Best Support ever!</h6>
+                <h6>Good cleaning service</h6>
                 <p>
                   5 stars for design quality, but also for prompt new customer
                   service and great attention to details work.
@@ -858,10 +858,52 @@
               </div>
               <div class="testimonial-author">
                 <div class="author-img">
-                  <img src="/assets/img/testimonal 1.jpg" alt="" />
+                  <img src="/assets/img/testimonal 2.jpg" alt="" />
                 </div>
                 <div class="author-name">
-                  <a href="#">Alina Lora</a>
+                  <a href="#">Tanir Fro</a>
+                  <p>Formar Manager.</p>
+                </div>
+              </div>
+            </div>
+            <div class="testimonials-item">
+              <div class="quoute-icon">
+                <i class="fas fa-quote-right"></i>
+              </div>
+              <div class="testimonial-text">
+                <h6>Service satisfaction!</h6>
+                <p>
+                  5 stars for design quality, but also for prompt new customer
+                  service and great attention to details work.
+                </p>
+              </div>
+              <div class="testimonial-author">
+                <div class="author-img">
+                  <img src="/assets/img/testimonal 3.jpg" alt="" />
+                </div>
+                <div class="author-name">
+                  <a href="#">Leofar Ford</a>
+                  <p>Formar Manager.</p>
+                </div>
+              </div>
+            </div>
+            <div class="testimonials-item">
+              <div class="quoute-icon">
+                <i class="fas fa-quote-right"></i>
+              </div>
+              <div class="testimonial-text">
+                <h6>Best teaching tips!</h6>
+                <p>
+                  5 stars for design quality, but also for prompt new customer
+                  service and great attention to details work.
+                </p>
+              </div>
+              <div class="testimonial-author">
+                <div class="author-img">
+                  <img src="/assets/img/testimonal 4.jpg" alt="" />
+                </div>
+                <div class="author-name">
+                  <a href="#">Rohit Grow</a>
                   <p>Formar Manager.</p>
                 </div>
               </div>
@@ -892,7 +934,7 @@
                 <i class="fas fa-quote-right"></i>
               </div>
               <div class="testimonial-text">
-                <h6>Best Support ever!</h6>
+                <h6>Good cleaning service</h6>
                 <p>
                   5 stars for design quality, but also for prompt new customer
                   service and great attention to details work.
@@ -900,10 +942,10 @@
               </div>
               <div class="testimonial-author">
                 <div class="author-img">
-                  <img src="/assets/img/testimonal 1.jpg" alt="" />
+                  <img src="/assets/img/testimonal 2.jpg" alt="" />
                 </div>
                 <div class="author-name">
-                  <a href="#">Alina Lora</a>
+                  <a href="#">Tanir Fro</a>
                   <p>Formar Manager.</p>
                 </div>
               </div>
@@ -913,7 +955,7 @@
                 <i class="fas fa-quote-right"></i>
               </div>
               <div class="testimonial-text">
-                <h6>Best Support ever!</h6>
+                <h6>Service satisfaction!</h6>
                 <p>
                   5 stars for design quality, but also for prompt new customer
                   service and great attention to details work.
@@ -921,10 +963,10 @@
               </div>
               <div class="testimonial-author">
                 <div class="author-img">
-                  <img src="/assets/img/testimonal 1.jpg" alt="" />
+                  <img src="/assets/img/testimonal 3.jpg" alt="" />
                 </div>
                 <div class="author-name">
-                  <a href="#">Alina Lora</a>
+                  <a href="#">Leofar Ford</a>
                   <p>Formar Manager.</p>
                 </div>
               </div>
@@ -934,7 +976,7 @@
                 <i class="fas fa-quote-right"></i>
               </div>
               <div class="testimonial-text">
-                <h6>Best Support ever!</h6>
+                <h6>Best teaching tips!</h6>
                 <p>
                   5 stars for design quality, but also for prompt new customer
                   service and great attention to details work.
@@ -942,10 +984,10 @@
               </div>
               <div class="testimonial-author">
                 <div class="author-img">
-                  <img src="/assets/img/testimonal 1.jpg" alt="" />
+                  <img src="/assets/img/testimonal 4.jpg" alt="" />
                 </div>
                 <div class="author-name">
-                  <a href="#">Alina Lora</a>
+                  <a href="#">Rohit Grow</a>
                   <p>Formar Manager.</p>
                 </div>
               </div>
