Testimonials are responsive now

--- a/index.html
+++ b/index.html
@@ -995,6 +995,42 @@
           </div>
         </div>
       </section>
+      <!-- <section id="latset-news">
+        <div class="container">
+          <div class="section-title">
+            <p class="background-title">Latest News</p>
+            <span class="section-subtitle">_ Latest News _</span>
+            <h2 class="section-bigtitle">
+              We have many courses in our top Categories
+            </h2>
+          </div>
+          <div class="latset-news-slider owl-carousel owl-theme">
+            <div class="news-item">
+              <div class="news-img-date">
+                <img src="/assets/img/latset news 1.jpg" alt="" />
+                <div class="date">
+                  <span class="day">10</span>
+                  <span class="month-year">Feb/20</span>
+                </div>
+              </div>
+              <div class="news-text">
+                <div class="comments">
+                  <span>By Admin</span>
+                  <span>0 Comments</span>
+                </div>
+                <h6 class="news-link">
+                  <a href="#">We would love to share a similar experience</a>
+                </h6>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do...
+                </p>
+                <a class="read-more" href="#">Read More</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section> -->
     </main>
     <footer></footer>
     <!-- Modal -->
