News section style finished

--- a/index.html
+++ b/index.html
@@ -995,7 +995,7 @@
           </div>
         </div>
       </section>
-      <!-- <section id="latset-news">
+      <section id="latset-news">
         <div class="container">
           <div class="section-title">
             <p class="background-title">Latest News</p>
@@ -1007,30 +1007,32 @@
           <div class="latset-news-slider owl-carousel owl-theme">
             <div class="news-item">
               <div class="news-img-date">
-                <img src="/assets/img/latset news 1.jpg" alt="" />
-                <div class="date">
-                  <span class="day">10</span>
-                  <span class="month-year">Feb/20</span>
+                <div class="news-img">
+                  <img src="/assets/img/latset news 1.jpg" alt="" />
                 </div>
+                <a href="#" class="date">
+                  <span>10</span>
+                  <span>Feb/20</span>
+                </a>
               </div>
               <div class="news-text">
                 <div class="comments">
-                  <span>By Admin</span>
-                  <span>0 Comments</span>
+                  <a href="#">BY ADMIN</a>
+                  <a href="#">0 COMMENTS</a>
                 </div>
-                <h6 class="news-link">
+                <h3>
                   <a href="#">We would love to share a similar experience</a>
-                </h6>
+                </h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
                   do...
                 </p>
-                <a class="read-more" href="#">Read More</a>
+                <a class="read-more" href="#">READ MORE +</a>
               </div>
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
     </main>
     <footer></footer>
     <!-- Modal -->
