News section finished

--- a/index.html
+++ b/index.html
@@ -997,7 +997,7 @@
       </section>
       <section id="latset-news">
         <div class="container">
-          <div class="section-title">
+          <div class="section-title mb-5">
             <p class="background-title">Latest News</p>
             <span class="section-subtitle">_ Latest News _</span>
             <h2 class="section-bigtitle">
@@ -1022,6 +1022,135 @@
                 </div>
                 <h3>
                   <a href="#">We would love to share a similar experience</a>
+                </h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do...
+                </p>
+                <a class="read-more" href="#">READ MORE +</a>
+              </div>
+            </div>
+            <div class="news-item">
+              <div class="news-img-date">
+                <div class="news-img">
+                  <img src="/assets/img/latset news 2.jpg" alt="" />
+                </div>
+                <a href="#" class="date">
+                  <span>20</span>
+                  <span>Oct/20</span>
+                </a>
+              </div>
+              <div class="news-text">
+                <div class="comments">
+                  <a href="#">BY ADMIN</a>
+                  <a href="#">0 COMMENTS</a>
+                </div>
+                <h3>
+                  <a href="#"
+                    >New study reveals flaws in UK Coronavirus testing...</a
+                  >
+                </h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do...
+                </p>
+                <a class="read-more" href="#">READ MORE +</a>
+              </div>
+            </div>
+            <div class="news-item">
+              <div class="news-img-date">
+                <div class="news-img">
+                  <img src="/assets/img/latset news 3.jpg" alt="" />
+                </div>
+                <a href="#" class="date">
+                  <span>15</span>
+                  <span>Nov/20</span>
+                </a>
+              </div>
+              <div class="news-text">
+                <div class="comments">
+                  <a href="#">BY ADMIN</a>
+                  <a href="#">0 COMMENTS</a>
+                </div>
+                <h3>
+                  <a href="#">Engineers ready to supply local business...</a>
+                </h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do...
+                </p>
+                <a class="read-more" href="#">READ MORE +</a>
+              </div>
+            </div>
+            <div class="news-item">
+              <div class="news-img-date">
+                <div class="news-img">
+                  <img src="/assets/img/latset news 1.jpg" alt="" />
+                </div>
+                <a href="#" class="date">
+                  <span>10</span>
+                  <span>Feb/20</span>
+                </a>
+              </div>
+              <div class="news-text">
+                <div class="comments">
+                  <a href="#">BY ADMIN</a>
+                  <a href="#">0 COMMENTS</a>
+                </div>
+                <h3>
+                  <a href="#">We would love to share a similar experience</a>
+                </h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do...
+                </p>
+                <a class="read-more" href="#">READ MORE +</a>
+              </div>
+            </div>
+            <div class="news-item">
+              <div class="news-img-date">
+                <div class="news-img">
+                  <img src="/assets/img/latset news 2.jpg" alt="" />
+                </div>
+                <a href="#" class="date">
+                  <span>20</span>
+                  <span>Oct/20</span>
+                </a>
+              </div>
+              <div class="news-text">
+                <div class="comments">
+                  <a href="#">BY ADMIN</a>
+                  <a href="#">0 COMMENTS</a>
+                </div>
+                <h3>
+                  <a href="#"
+                    >New study reveals flaws in UK Coronavirus testing...</a
+                  >
+                </h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do...
+                </p>
+                <a class="read-more" href="#">READ MORE +</a>
+              </div>
+            </div>
+            <div class="news-item">
+              <div class="news-img-date">
+                <div class="news-img">
+                  <img src="/assets/img/latset news 3.jpg" alt="" />
+                </div>
+                <a href="#" class="date">
+                  <span>15</span>
+                  <span>Nov/20</span>
+                </a>
+              </div>
+              <div class="news-text">
+                <div class="comments">
+                  <a href="#">BY ADMIN</a>
+                  <a href="#">0 COMMENTS</a>
+                </div>
+                <h3>
+                  <a href="#">Engineers ready to supply local business...</a>
                 </h3>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
