Subscribe form banner added

--- a/index.html
+++ b/index.html
@@ -1162,8 +1162,58 @@
           </div>
         </div>
       </section>
+      <section id="subscribe-form">
+        <div class="container">
+          <div class="row subscribe-content">
+            <div class="col-md-6">
+              <div class="newsletter-text">
+                <h3>Subscribe to a Newsletter!</h3>
+                <p>
+                  You will get our update instantly!
+                  <span><img src="/assets/img/like.png" alt="" /></span>
+                </p>
+              </div>
+            </div>
+            <div class="col-md-6">
+              <form action="#">
+                <input
+                  type="email"
+                  name=""
+                  id=""
+                  placeholder="Enter your mail adress..."
+                />
+                <button type="submit" class="btn-usual">
+                  Submit <span><i class="fas fa-arrow-right"></i></span>
+                </button>
+              </form>
+            </div>
+          </div>
+          <!-- <div class="subcribe-content">
+            <div class="newsletter-text">
+              <h3>Subscribe to a Newsletter!</h3>
+              <p>
+                You will get our update instantly!
+                <span><img src="/assets/img/like.png" alt="" /></span>
+              </p>
+            </div>
+            <form action="#">
+              <input
+                type="email"
+                name=""
+                id=""
+                placeholder="Enter your mail adress..."
+              />
+              <button type="submit" class="btn-usual">
+                Submit <span><i class="fas fa-arrow-right"></i></span>
+              </button>
+            </form>
+          </div> -->
+        </div>
+      </section>
     </main>
-    <footer></footer>
+    <footer id="footer">
+      <div class="container"></div>
+    </footer>
     <!-- Modal -->
     <div
       class="modal fade"
