--- a/index.html
+++ b/index.html
@@ -1188,31 +1188,123 @@
               </form>
             </div>
           </div>
-          <!-- <div class="subcribe-content">
-            <div class="newsletter-text">
-              <h3>Subscribe to a Newsletter!</h3>
-              <p>
-                You will get our update instantly!
-                <span><img src="/assets/img/like.png" alt="" /></span>
-              </p>
-            </div>
-            <form action="#">
-              <input
-                type="email"
-                name=""
-                id=""
-                placeholder="Enter your mail adress..."
-              />
-              <button type="submit" class="btn-usual">
-                Submit <span><i class="fas fa-arrow-right"></i></span>
-              </button>
-            </form>
-          </div> -->
         </div>
       </section>
     </main>
     <footer id="footer">
-      <div class="container"></div>
+      <div class="container">
+        <div class="footer-content">
+          <div class="row">
+            <div class="col-lg-3">
+              <div class="footer-logo">
+                <img src="/assets/img/logo foot.png" alt="" />
+              </div>
+              <p class="footer-text">
+                We work with a passion of taking challenges and creating new
+                ones in advertising sector.
+              </p>
+              <a href="#" class="btn-usual">ABOUT US</a>
+            </div>
+            <div class="col-lg-3">
+              <h3 class="footer-title">Newsletter</h3>
+              <p class="footer-text">
+                Subscribe our newsletter to get our latest update & news
+              </p>
+              <form action="#">
+                <input
+                  type="email"
+                  name=""
+                  id=""
+                  placeholder="Your mail adress"
+                />
+                <button type="submit">
+                  <i class="far fa-paper-plane"></i>
+                </button>
+              </form>
+              <ul class="social-links">
+                <li>
+                  <a href="https://www.facebook.com/"
+                    ><i class="fab fa-facebook-f"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="https://twitter.com/?lang=en"
+                    ><i class="fab fa-twitter"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="#"><i class="fab fa-behance"></i></a>
+                </li>
+                <li>
+                  <a href="https://www.youtube.com/"
+                    ><i class="fab fa-youtube"></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
+            <div class="col-lg-3 pl-40">
+              <h3 class="footer-title">Official info:</h3>
+              <ul class="contact">
+                <li>
+                  <i class="fas fa-map-marker-alt"></i>
+                  <a href="#">30 Commercial Road Fratton, Australia</a>
+                </li>
+                <li>
+                  <i class="fas fa-phone"></i><a href="#">1-888-452-1505</a>
+                </li>
+              </ul>
+              <div class="open-hours">
+                <span> Open Hours: </span>
+                <p>
+                  Mon - Sat: 8 am - 5 pm, <br />
+                  Sunday: CLOSED
+                </p>
+              </div>
+            </div>
+            <div class="col-lg-3">
+              <h3 class="footer-title">Instagram</h3>
+              <ul class="instagram">
+                <li>
+                  <a href="#"
+                    ><img src="/assets/img/instagram/ins1.jpg" alt="" />
+                    <i class="fab fa-instagram"></i>
+                  </a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="/assets/img/instagram/ins2.jpg" alt="" />
+                    <i class="fab fa-instagram"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="/assets/img/instagram/ins3.jpg" alt="" />
+                    <i class="fab fa-instagram"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="/assets/img/instagram/ins4.jpg" alt="" />
+                    <i class="fab fa-instagram"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="/assets/img/instagram/ins5.jpg" alt="" />
+                    <i class="fab fa-instagram"></i
+                  ></a>
+                </li>
+                <li>
+                  <a href="#"
+                    ><img src="/assets/img/instagram/ins6.jpg" alt="" />
+                    <i class="fab fa-instagram"></i
+                  ></a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
     </footer>
     <!-- Modal -->
     <div
