First page all responsive things are done

--- a/index.html
+++ b/index.html
@@ -1195,7 +1195,7 @@
       <div class="container">
         <div class="footer-content">
           <div class="row">
-            <div class="col-lg-3">
+            <div class="col-md-6 col-lg-3">
               <div class="footer-logo">
                 <img src="/assets/img/logo foot.png" alt="" />
               </div>
@@ -1205,7 +1205,7 @@
               </p>
               <a href="#" class="btn-usual">ABOUT US</a>
             </div>
-            <div class="col-lg-3">
+            <div class="col-md-6 col-lg-3">
               <h3 class="footer-title">Newsletter</h3>
               <p class="footer-text">
                 Subscribe our newsletter to get our latest update & news
@@ -1242,7 +1242,7 @@
                 </li>
               </ul>
             </div>
-            <div class="col-lg-3 pl-40">
+            <div class="col-md-6 col-lg-3 pl-40">
               <h3 class="footer-title">Official info:</h3>
               <ul class="contact">
                 <li>
@@ -1261,7 +1261,7 @@
                 </p>
               </div>
             </div>
-            <div class="col-lg-3">
+            <div class="col-md-6 col-lg-3">
               <h3 class="footer-title">Instagram</h3>
               <ul class="instagram">
                 <li>
@@ -1303,6 +1303,9 @@
               </ul>
             </div>
           </div>
+        </div>
+        <div class="footer-copyright">
+          <span>© 2021 Yle - Education. All rights reserved.</span>
         </div>
       </div>
     </footer>
