--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="/assets/css/style.css" />
 
     <title>Home</title>
@@ -1381,6 +1385,9 @@
           </div>
         </div>
       </div>
+    </div>
+    <div class="scroll-up">
+      <i class="fas fa-chevron-up"></i>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
