About page created

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
         <div class="container">
           <div class="navbar-content">
             <div class="navbar-logo">
-              <img src="/assets/img/logo head.png" alt="" />
+              <a href="/index.html">
+                <img src="/assets/img/logo head.png" alt="" />
+              </a>
             </div>
             <ul class="navbar-items">
               <li class="dropdown">
@@ -44,18 +46,18 @@
                 <ul class="dropdown-content">
                   <li><a target="_blank" href="index.html">Home Page 1</a></li>
                   <li>
-                    <a target="_blank" href="index-2.html">Home Page 2</a>
+                    <a target="_blank" href="#">Home Page 2</a>
                   </li>
                   <li>
-                    <a target="_blank" href="index-3.html">Home Page 3</a>
+                    <a target="_blank" href="#">Home Page 3</a>
                   </li>
                   <li>
-                    <a target="_blank" href="index-4.html">Home Page 4</a>
+                    <a target="_blank" href="#">Home Page 4</a>
                   </li>
                 </ul>
               </li>
               <li>
-                <a href="">About</a>
+                <a href="/about.html">About</a>
               </li>
               <li class="dropdown">
                 <a href="">Course</a>
